Added manual pilot mode and some major changes to core src code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,10 @@ requires = ["setuptools>=42",
             "pandas",
             "numpy",
             "datetime",
-            ]
+            "keyboard",
+            "time",
+            "threading",
+            "socket",
+            "sys",
+            "pygame"]
 build-backend = "setuptools.build_meta"
