Added the first draft of the ground control UI layer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,8 @@ requires = ["setuptools>=42",
             "threading",
             "socket",
             "sys",
-            "pygame"]
+            "pygame",
+            "streamlit>=1.30",
+            "streamlit-webrtc>=0.47",
+            "opencv-python>=4.9"]
 build-backend = "setuptools.build_meta"
