--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = SkySearch
 version = 0.0.1
-author = Duncan Calvert, Joon Park, Zach Farahany, Mohammad Ayan Rahel
+author = Duncan Calvert, Joon Park, Zach Farahany, Mohammad Ayan Raheel
 author_email = duncanscalvert@gmail.com
 description = SkySearch is an open source Python package that allows simple, flexible, and robust DJI drone swarm capabilities tailored for search and rescue.
 long_description = file: README.md
